[package]
name = "rust-bitcoin-ctv-vectors"
description = "Simple, hacky, utility to generate BIP-119 test vectors"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.5"
bitcoincore-rpc = "0.19.0"
bitcoincore-rpc-json = "0.19.0"
clap = { version = "4.5.34", features = ["derive"] }
rand = "0.9.0"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
